# Agentify

./: .gitignore  .pre-commit-config.yaml  688ee5f3-3998-424c-8a82-de80d794cee6.html  README.md  pyproject.toml
api/: main.py  pyproject.toml  settings.py
api/biz/agent/blueprint/: chat_graph.py  graph.py  node.py  prompt.py  state.py
api/biz/agent/requirement/: graph.py  node.py  prompt.py  state.py
api/biz/agent/workflow/: graph.py  node.py  prompt.py  state.py  utils.py
api/biz/agent/workflow/dify_nodes/: __init__.py  base.py
api/biz/agent/workflow/dify_nodes/answer/: node.py  tool.py
api/biz/agent/workflow/dify_nodes/code/: node.py  tool.py  type.py
api/biz/agent/workflow/dify_nodes/document_extractor/: node.py  (+2 more)
api/biz/service/: blueprint.py  llm.py  requirement.py
api/common/constants/: __init__.py  dify_constants.py  user_constants.py
api/common/di/: __init__.py  container.py
api/common/dto/: blueprint.py  requirement.py  user.py
api/common/enums/: error_code.py  task.py
api/common/exceptions/: __init__.py  dify_exception.py  general_exception.py
api/common/utils/: dify_client.py  get_llm_model.py  get_user.py
api/dal/: checkpointer.py  database.py  init_db.py
api/dal/dao/: blueprint.py  dify_workflow.py  requirement.py
api/dal/po/: blueprint.py  dify_workflow.py  requirement.py
api/web/controller/: __init__.py  blueprint.py  requirement.py  workflow.py
api/web/handler/: __init__.py  exception_handler.py
api/web/lifespan/: __init__.py
api/web/middleware/: __init__.py  middlewares.py
api/web/vo/: __init__.py  result.py
(+60 files in other folders)
